--- a/views/usuario/editar.ejs
+++ b/views/usuario/editar.ejs
@@ -1,17 +1,29 @@
 ﻿<input type="hidden" id="id" name="id" value="<%=(item ? item.id : 0) %>" />
 
 <div class="row">
-	<div class="col-sm-6">
+	<div class="col-sm-6 col-md-4">
 		<div class="form-group">
 			<label for="email">E-mail</label>
 			<input id="email" name="email" maxlength="85" class="form-control" type="email" spellcheck="false" value="<%=(item ? item.email : '') %>" <%=(item ? 'readonly="readonly"' : '') %> />
 		</div>
 	</div>
 
-	<div class="col-sm-6">
+	<div class="col-sm-6 col-md-4">
 		<div class="form-group">
 			<label for="nome">Nome</label>
 			<input id="nome" name="nome" maxlength="100" class="form-control" type="text" spellcheck="false" value="<%=(item ? item.nome : '') %>" />
+		</div>
+	</div>
+
+	<div class="col-md-4">
+		<div class="form-group">
+			<input type="hidden" id="iddepartamento" name="iddepartamento" />
+			<label for="iddepartamentoselect">Departamento</label>
+			<select id="iddepartamentoselect" class="form-control" size="1">
+				<% for (let i = 0; i < departamentos.length; i++) { %>
+				<option value="<%= departamentos[i].id %>"><%= departamentos[i].nome %></option>
+				<% } %>
+			</select>
 		</div>
 	</div>
 </div>
@@ -30,6 +42,12 @@
 <script type="text/javascript">
 	//<![CDATA[
 	"use strict";
+
+	prepareMultiselect("#iddepartamentoselect", { title: "Departamento", label: "Departamento" });
+
+	//<% if (item) { %>
+	setMultiselectSelection("#iddepartamentoselect", [<%- item.iddepartamento.map(d => d.iddepartamento).join(",") %>]);
+	//<% } %>
 
 	$("#form").validate({
 		rules: {
@@ -50,6 +68,8 @@
 
 			Swal.wait();
 
+			$("#iddepartamento").val(getMultiselectSelection("#iddepartamentoselect").join(","));
+
 			//<% if (item) { %>
 
 			JsonWebApi.postFormData("<%- root %>/api/usuario/editar", form, function (response) {
@@ -64,6 +84,7 @@
 			JsonWebApi.postFormData("<%- root %>/api/usuario/criar", form, function (response) {
 				if (response.success) {
 					resetForm("#form");
+					setMultiselectSelection("#iddepartamentoselect", []);
 					Swal.success("Usuário criado com sucesso! " + emoji.happy);
 				} else {
 					Swal.error(response.value + " " + emoji.sad);
