--- a/views/questionario/editar.ejs
+++ b/views/questionario/editar.ejs
@@ -305,7 +305,7 @@
         //<![CDATA[
         "use strict";
 
-        document.getElementById("urlbase").innerText = location.protocol + '//' + location.hostname + "/s/";
+        document.getElementById("urlbase").innerText = location.protocol + '//' + location.hostname + "/teste/";
 
         
         CKEDITOR.replace("textointroducao");
