--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+<nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" style="z-index: 1;">
 
-	<button type="button" id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+	<button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
 		<i class="fa fa-bars"></i>
 	</button>
 
@@ -25,7 +25,7 @@
 				</a>
 				<div class="dropdown-divider"></div>
 				<a class="dropdown-item" href="<%- root %>/logout">
-					<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 op-40"></i>
+					<i class="fas fa-sign-out-alt fa-fw mr-2 op-40"></i>
 					Logout
 				</a>
 			</div>
