--- a/views/cabecalho.ejs
+++ b/views/cabecalho.ejs
@@ -60,8 +60,8 @@
 <% } %>
 
 <script type="text/javascript" charset="utf-8" src="<%- staticRoot %>/lib/jquery/jquery.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="<%- staticRoot %>/lib/sweetalert2-11.4.19/js/sweetalert2.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="<%- staticRoot %>/js/main.js?20220630"></script>
+<script type="text/javascript" charset="utf-8" src="<%- staticRoot %>/lib/sweetalert2-11.4.19/js/sweetalert2.min.js?20250908"></script>
+<script type="text/javascript" charset="utf-8" src="<%- staticRoot %>/js/main.js?20250908"></script>
 
 <% if (typeof datepicker !== "undefined" && datepicker) { %>
 <script type="text/javascript" src="<%- staticRoot %>/lib/bootstrap-datepicker-1.9.0/js/bootstrap-datepicker.min.js"></script>
