--- a/views/departamento/editar.ejs
+++ b/views/departamento/editar.ejs
@@ -1,6 +1,6 @@
 ﻿<input type="hidden" id="id" name="id" value="<%=(item ? item.id : 0) %>" />
 
-<div class="form-group">
+<div class="form-group mb-0">
 	<label for="nome">Nome</label>
 	<input id="nome" name="nome" maxlength="100" class="form-control" type="text" spellcheck="false" value="<%=(item ? item.nome : '') %>" />
 </div>
