Preparação para login em questionários não-anônimos

--- a/views/questionario/questionario.ejs
+++ b/views/questionario/questionario.ejs
@@ -67,6 +67,8 @@
   }
 </style>
 
+<a href="<%- ssoRedirBase %><%- encodeURIComponent(urlSite + "/teste/" + item.url) %>" target="_blank">Visualizar</a>
+
 <div id="questionario" class="container-fluid">
   <div class="row">
     <div class="col-12">
