--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,8 +22,8 @@ $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
 $red: #e74a3b !default;
 $red-dark: #a80532 !default;
-$orange: #fd7e14 !default;
-$yellow: #f6c23e !default;
+$orange: #ff7a27 !default;
+$yellow: #f5b41e !default;
 $green: #1cc88a !default;
 $teal: #20c9a6 !default;
 $cyan: #36b9cc !default;
@@ -61,8 +61,8 @@ $font-weight-light: 300 !default;
 $headings-font-weight: 400 !default;
 
 // Shadows
-$box-shadow-sm: 0 0.125rem 0.25rem 0 rgba($gray-900, .2) !default;
-$box-shadow: 0 0.15rem 1.75rem 0 rgba($gray-900, .15) !default;
+//$box-shadow-sm: 0 0.125rem 0.25rem 0 rgba($gray-900, .2) !default;
+//$box-shadow: 0 0.15rem 1.75rem 0 rgba($gray-900, .15) !default;
 // $box-shadow-lg: 0 1rem 3rem rgba($black, .175) !default;
 
 // Borders Radius
