--- a/views/rodape.ejs
+++ b/views/rodape.ejs
@@ -16,7 +16,7 @@
 <% } %>
 
 <% if (typeof xlsx !== "undefined" && xlsx) { %>
-<script type="text/javascript" src="<%- staticRoot %>/lib/sheetjs/xlsx.full.min.js"></script>
+<script type="text/javascript" src="<%- staticRoot %>/lib/sheetjs/xlsx.full.min.js?20251009"></script>
 <% } %>
 
 <% if (typeof clipboard !== "undefined" && clipboard) { %>
