--- a/scss/navs/_sidebar.scss
+++ b/scss/navs/_sidebar.scss
@@ -38,7 +38,7 @@
 
             .collapse-inner {
                 border-radius: $border-radius;
-                box-shadow: $box-shadow;
+                box-shadow: $dropdown-box-shadow;
             }
         }
 
@@ -67,19 +67,21 @@
 
                 .collapse-item {
                     padding: 0.5rem 1rem;
-                    margin: 0 0.5rem;
+                    //margin: 0 0.5rem;
                     display: block;
                     color: $gray-900;
                     text-decoration: none;
-                    border-radius: $border-radius;
+                    //border-radius: $border-radius;
                     white-space: nowrap;
 
+                    &:focus,
                     &:hover {
                         background-color: $gray-200;
                     }
 
                     &:active {
-                        background-color: $gray-300;
+                        color: $dropdown-link-active-color;
+                        background-color: $dropdown-link-active-bg; //$gray-300;
                     }
 
                     &.active {
@@ -285,7 +287,7 @@
                     animation-timing-function: transform cubic-bezier(.18, 1.25, .4, 1), opacity cubic-bezier(0, 1, .4, 1);
 
                     .collapse-inner {
-                        box-shadow: $box-shadow;
+                        box-shadow: $dropdown-box-shadow;
                         border-radius: $border-radius;
                     }
                 }
@@ -362,7 +364,8 @@
             color: $gray-600;
 
             i {
-                color: $gray-400;
+                color: $black;
+                opacity: 0.5;
             }
 
             &:active,
@@ -371,7 +374,7 @@
                 color: $gray-700;
 
                 i {
-                    color: $gray-700;
+                    opacity: 1;
                 }
             }
 
@@ -425,7 +428,8 @@
             color: fade-out($white, 0.2);
 
             i {
-                color: fade-out($white, 0.7);
+                color: $white;
+                opacity: 0.7;
             }
 
             &:active,
@@ -434,7 +438,7 @@
                 color: $white;
 
                 i {
-                    color: $white;
+                    opacity: 1;
                 }
             }
 
