--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -29,7 +29,7 @@
 	</li>
 	<% } %>
 
-	<% if (usuario.admin || usuario.diretor) { %>
+	<% if (usuario.admin) { %>
 	<li class="nav-item">
 		<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseDepartamentos" aria-expanded="true" aria-controls="collapseDepartamentos">
 			<i class="fas fa-fw fa-building"></i>
