--- a/views/arquetipo/listar.ejs
+++ b/views/arquetipo/listar.ejs
@@ -12,7 +12,7 @@
 			{ title: "", "class": "col-min", searchable: false, orderable: false, data: "id", render: function (v, type, row) { return '<a target="_blank" title="Editar" href="<%- root %>/arquetipo/editar?id=' + row.id + '" class="btn btn-sm btn-outline-primary"><i class="fa fa-fw fa-edit"></i></a> <button title="Excluir" type="button" data-excluir="1" class="btn btn-sm btn-outline-danger"><i class="fa fa-fw fa-times"></i></button>' } },
 			{ title: "Nome", render: encode, data: "nome" },
 			{ title: "Nome externo", render: encode, data: "nomeexterno" },
-			{ title: "Departamento", render: encode, data: "departamento" },
+			{ title: "Departamento", "class": "obs-col quebra-linha", render: encode, data: "departamentos" },
 			{ title: "Descricao curta", render: encode, data: "descricaocurta" },
 		],
 		data: <%- JSON.stringify(lista) %>,
