--- a/views/questionario/editar.ejs
+++ b/views/questionario/editar.ejs
@@ -315,11 +315,11 @@
 
         //<% if (item) { %>
 
-        setMultiselectSelection("#iddepartamentoselect", [<%- item.iddepartamento.map(d => d.iddepartamento).join(",") %>]);
-        setMultiselectSelection("#idpublicoalvoselect", [<%- item.idpublicosalvos.map(d => d.idpublicoalvo).join(",") %>]);
+        setMultiselectSelection("#iddepartamentoselect", [<%- item.iddepartamento.join(",") %>]);
+        setMultiselectSelection("#idpublicoalvoselect", [<%- item.idpublicosalvos.join(",") %>]);
         
         prepareMultiselect("#iddarquetiposselect", { title: "Arquétipo", label: "Arquétipo" });
-        setMultiselectSelection("#iddarquetiposselect", [<%- item.idarquetipos.map(d => d.idarquetipo).join(",") %>]);
+        setMultiselectSelection("#iddarquetiposselect", [<%- item.idarquetipos.join(",") %>]);
         
 
         const arquetipos = [<%- arquetipos.map(d => JSON.stringify({id:d.id, nome:d.nome})).join(",") %>];
